--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,3 +1,8 @@
+$colorPrimary: #000000;
+$colorPrimaryLight: rgba(0, 0, 0, 0.8);
+$colorSecondry: rgb(0, 153, 255);
+$colorAccent: rgb(255, 0, 136);
+
 $dublinBusYellow: #ffcc01;
 $dublinBusYellowDark: #ab8f1f;
 
