--- a/assets/styles/components/_serviceBox.scss
+++ b/assets/styles/components/_serviceBox.scss
@@ -1,14 +1,30 @@
 .serviceBox {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: whitesmoke;
   margin-bottom: 2rem;
   margin-left: 1rem;
   margin-right: 1rem;
   border-radius: 10px;
+  color: whitesmoke;
+
+  &.dublinBus {
+    background-color: $dublinBusYellow;
+  }
+
+  &.irishRail {
+    background-color: $irishRailGreen;
+  }
+
+  &.luas {
+    background-color: $luasPurple;
+  }
+
+  &.dublinBikes {
+    background-color: $dublinBikesBlue;
+  }
 
   &:hover {
-    background-color: grey;
+    background-color: rgba(0, 0, 0, 0.1);
   }
 
   .service-title {
