--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -5,8 +5,14 @@
 
 @import "components/header";
 @import "components/navbar";
+@import "components/footer";
 @import "components/serviceBox";
+@import "components/searchBox";
 
-.gradient {
+.styledBackground {
   background: linear-gradient(0deg, $colorPrimaryLight, $colorPrimary), linear-gradient(90deg, $colorAccent, $colorSecondry);
+}
+
+.styledBackgroundReverse {
+  background: linear-gradient(0deg, $colorPrimary, $colorPrimaryLight), linear-gradient(90deg, $colorAccent, $colorSecondry);
 }
