Start on timetable stuff, kinda useless atm

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -8,6 +8,7 @@
 @import "components/footer";
 @import "components/serviceBox";
 @import "components/searchBox";
+@import "components/timetables";
 
 .styledBackground {
   background: linear-gradient(0deg, $colorPrimaryLight, $colorPrimary), linear-gradient(90deg, $colorAccent, $colorSecondry);
