--- a/assets/styles/components/_searchBox.scss
+++ b/assets/styles/components/_searchBox.scss
@@ -1,3 +1,14 @@
 .searchBox {
+  .field {
+    justify-content: center;
+  }
 
+  .control {
+    filter: drop-shadow(5px 5px 4px $colorSecondry);
+    border: none;
+    margin: 2% 0 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 8px;
+  }
 }
