--- a/oldStuff/assets/styles/_variables.scss
+++ b/oldStuff/assets/styles/_variables.scss
@@ -14,3 +14,11 @@ $luasPurpleDark: #553193;
 
 $dublinBikesBlue: #114d57;
 $dublinBikesBlueDark: #084c55;
+
+$color-grey: rgb(67, 76, 88);
+$color-white: rgb(244, 249, 252);
+$color-red: rgb(235, 37, 37);
+$color-orange: rgb(245, 103, 20);
+$color-yellow: rgb(241, 227, 32);
+$color-green: rgb(89, 199, 16);
+$color-blue: rgb(25, 138, 243);
