--- a/components/Navbar/style.scss
+++ b/components/Navbar/style.scss
@@ -7,6 +7,7 @@ $animate: all 0.2s ease-in-out;
     text-align: center;
     margin: 0 auto;
     padding: 0.5rem 0.75rem 0 !important;
+    font-family: "Nunito Sans", sans-serif;
     transition: $animate;
     position: relative;
     &:before,
@@ -21,7 +22,7 @@ $animate: all 0.2s ease-in-out;
         transition-duration: 0.5s;
         opacity: 0;
         right: 50%;
-        background-color: darken($color-blue,5%);
+        background-color: darken($colour-blue, 5%);
     }
 
     &:before {
