--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
-$color-grey: rgb(67, 76, 88);
-$color-white: rgb(244, 249, 252);
-$color-red: rgb(235, 37, 37);
-$color-orange: rgb(245, 103, 20);
-$color-yellow: rgb(241, 227, 32);
-$color-green: rgb(89, 199, 16);
-$color-blue: rgb(25, 138, 243);
+$colour-grey: rgb(67, 76, 88);
+$colour-white: rgb(244, 249, 252);
+$colour-red: rgb(235, 37, 37);
+$colour-orange: rgb(245, 103, 20);
+$colour-yellow: rgb(241, 227, 32);
+$colour-green: rgb(89, 199, 16);
+$colour-blue: rgb(25, 138, 243);
