Colours and the start of a dropdown

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,7 @@
 $colour-grey: rgb(67, 76, 88);
 $colour-white: rgb(244, 249, 252);
-$colour-red: rgb(235, 37, 37);
-$colour-orange: rgb(245, 103, 20);
+$colour-red: #D37573;
+$colour-orange: #f4a882;
 $colour-yellow: rgb(241, 227, 32);
-$colour-green: rgb(89, 199, 16);
-$colour-blue: rgb(25, 138, 243);
+$colour-green: #75E4B3;
+$colour-blue: #7A91F8;
