--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,10 +4,9 @@
 
 
 @mixin underline($colour, $name) {
-    $faded-colour: lighten(adjust-hue($colour, 20), 20%);
     .underline-look#{$name} {
-        border-bottom: 4px solid $faded-colour;
-        box-shadow: inset 0 -4px 0 $faded-colour;
+        border-bottom: 4px solid $colour;
+        box-shadow: inset 0 -4px 0 $colour;
     }
 
     a.underline-look#{$name} {
@@ -16,7 +15,7 @@
     }
 
     a.underline-look#{$name}:hover {
-        background-color: $faded-colour;
+        background-color: $colour;
         border-bottom: 4px solid transparent;
         box-shadow: inset 0 -4px 0 transparent;
     }
@@ -29,6 +28,10 @@
 @include underline($colour-green, ".green");
 @include underline($colour-blue, ".blue");
 @include underline($colour-grey, ".grey");
+
+.searchColumns .column{
+    padding: 0.75rem;
+}
 
 /*.underline-look {
     border-bottom: 4px solid rgba($color-green, 0.3);
