--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -5,3 +5,6 @@
 
 @import "components/header";
 @import "components/navbar";
+
+@import "components/indexPage";
+@import "components/fancySearchBox";
