--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -6,5 +6,22 @@
 @import "components/header";
 @import "components/navbar";
 
-@import "components/indexPage";
 @import "components/fancySearchBox";
+
+html, body, #__next, .columns {
+  height: 100%;
+  margin: 0;
+}
+
+.columnWrapper {
+  height: 100% !important;
+}
+.columnInfo {
+  margin-left: 2rem;
+  margin-top: 10rem;
+}
+
+.columnMap {
+  width: 100% !important;
+  background-color: red;
+}
