--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "components/navbar";
 
 @import "components/fancySearchBox";
+@import "components/transportItem";
 
 html, body, #__next, .columns {
   height: 100%;
@@ -27,6 +28,12 @@ html, body, #__next, .columns {
   position: fixed;
   width: 100%;
   bottom: 10rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+
+  b {
+    font-size: 1.5rem;
+  }
 
   .transportFooterContainer {
     display: flex;
