--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -20,8 +20,7 @@ html, body, #__next, .columns {
 }
 
 .columnMap {
-  width: 100% !important;
-  background-color: red;
+  padding: 0;
 }
 
 .transportFooter {
