--- a/assets/styles/components/_transportItem.scss
+++ b/assets/styles/components/_transportItem.scss
@@ -1,10 +1,12 @@
 .transportItem {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
   margin-left: 1rem;
   margin-right: 1rem;
   border-radius: 10px;
   color: black;
+
+  &:hover {
+    color: black;
+  }
 
   b {
     font-size: 1.5rem;
