--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -9,6 +9,7 @@
 
 @import "components/fancySearchBox";
 @import "components/transportFooter";
+@import "components/realTime";
 
 html, body, #__next, .columns {
   height: 100%;
