--- a/assets/styles/components/_realTime.scss
+++ b/assets/styles/components/_realTime.scss
@@ -17,6 +17,10 @@
       font-size: 2rem;
     }
 
+    span {
+      font-size: 1.25rem;
+    }
+
     .control {
       margin-right: 20rem;
     }
