--- a/assets/styles/components/_realTime.scss
+++ b/assets/styles/components/_realTime.scss
@@ -5,7 +5,7 @@
     margin-left: 1rem;
     margin-right: 1rem;
     padding-left: 1rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 
     h1 {
       font-size: 2rem;
@@ -18,6 +18,7 @@
     }
 
     span {
+      color: white;
       font-size: 1.25rem;
     }
 
