Loading spinner which I probably have to move soon

--- a/assets/styles/components/_realTime.scss
+++ b/assets/styles/components/_realTime.scss
@@ -35,6 +35,10 @@
       text-transform: uppercase;
     }
 
+    .loading {
+      margin-top: 5rem;
+    }
+
     .realTimeResultItem {
       background-color: whitesmoke;
       border-radius: 5px;
