Dublin bus api integration

--- a/assets/styles/components/_realTime.scss
+++ b/assets/styles/components/_realTime.scss
@@ -47,6 +47,8 @@
     .realTimeResultItem {
       background-color: whitesmoke;
       border-radius: 5px;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
     }
   }
 }
