--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -10,6 +10,7 @@
 @import "components/fancySearchBox";
 @import "components/transportFooter";
 @import "components/realTime";
+@import "components/loading";
 
 html, body, #__next, .columns {
   height: 100%;
