--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -11,6 +11,7 @@
 @import "components/transportFooter";
 @import "components/realTime";
 @import "components/loading";
+@import "components/notification";
 
 html, body, #__next, .columns {
   height: 100%;
