--- a/assets/styles/components/_realTime.scss
+++ b/assets/styles/components/_realTime.scss
@@ -1,7 +1,10 @@
 .realTime {
 
   .map {
-    margin-top: 6rem;
+    margin-top: 6.75rem;
+    padding: 0;
+    margin-right: 0.75rem;
+    margin-bottom: 0.75rem
   }
 
   .realTimeHeader {
