--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -7,7 +7,7 @@
 @import "components/header";
 @import "components/navbar";
 
-@import "components/fancySearchBox";
+@import "components/search";
 @import "components/transportFooter";
 @import "components/realTime";
 @import "components/loading";
