Change stop button

--- a/assets/styles/components/_search.scss
+++ b/assets/styles/components/_search.scss
@@ -3,6 +3,10 @@
     font-size: 1.5rem !important;
   }
 
+  .searchButton {
+    font-size: 1.5rem;
+  }
+
   .itemImage {
     width: 32px;
     display: inline-block;
