Attempt at design

--- a/assets/styles/components/_realtimeList.scss
+++ b/assets/styles/components/_realtimeList.scss
@@ -32,9 +32,9 @@
       position: relative;
       padding-top: 3rem;
       padding-bottom: 3rem;
-      font-size: 3rem;
+      font-size: 2rem;
       border-radius: 10px;
-      box-shadow: 0 0 5px 10px white inset;
+      outline-offset: 10px;
 
       p {
         font-size: 1.5rem;
