Maybe nice redesign?

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -4,6 +4,7 @@
 
 @import "variables";
 
+@import "components/hero";
 @import "components/header";
 @import "components/navbar";
 @import "components/footer";
@@ -14,34 +15,12 @@
 @import "components/loading";
 @import "components/notification";
 @import "components/realtimeList";
+@import "components/features";
 
-html, body, #__next, .columns {
-  height: 100%;
+html, body, #__next {
   margin: 0;
 }
 
-.header-title {
-  font-size: 4rem;
-  font-weight: bold;
-  color: black;
-
-  b {
-    color: #0c7908;
-  }
-}
-
-.columnInfo {
-  padding-right: 2.5rem;
-  padding-left: 2rem;
-  margin-top: 6rem;
-}
-
-.columnMap {
-  padding: 0;
-}
-
 // Probably shouldn't do this but ah well
-.gm-control-active, .gm-bundled-control-on-bottom, .gm-style-cc {
-  display: none;
-}
+//.gm-control-active, .gm-bundled-control-on-bottom, .gm-style-cc {display: none;}
 
