--- a/assets/styles/components/_navbar.scss
+++ b/assets/styles/components/_navbar.scss
@@ -1,10 +1,6 @@
 .navbar {
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 2rem;
-
-  box-shadow: 3px 3px 5px 6px #ccc;
-  border-radius: 5px;
+  background-color: #111 !important;
+  border-bottom: 2px solid $colorAccent;
 
   .navbar-title:hover {
     background-color: transparent;
