--- a/assets/styles/components/_features.scss
+++ b/assets/styles/components/_features.scss
@@ -1,5 +1,6 @@
 .features-bar {
   background-color: $colorPrimary;
+  margin: 0;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-bottom: 1rem;
