--- a/assets/styles/components/_features.scss
+++ b/assets/styles/components/_features.scss
@@ -1,12 +1,13 @@
 .features-bar {
   background-color: $colorPrimary;
   margin: 0;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-bottom: 1rem;
+  padding: 1rem;
 
   .feature-item {
     color: black;
     background-color: white;
+    border-radius: 5px;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 }
