--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -15,6 +15,7 @@
 @import "components/notification";
 @import "components/realtimeList";
 @import "components/features";
+@import "components/settingsModal";
 
 html, body, #__next {
   margin: 0;
