--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -16,6 +16,7 @@
 @import "components/realtimeList";
 @import "components/features";
 @import "components/settingsModal";
+@import "components/googleMap";
 
 html, body, #__next {
   margin: 0;
