--- a/assets/styles/components/_realTime.scss
+++ b/assets/styles/components/_realTime.scss
@@ -13,6 +13,7 @@
     margin-left: 1rem;
     margin-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
     padding-bottom: 1rem;
 
     h1 {
@@ -32,6 +33,10 @@
 
     .control {
       margin-right: 20rem;
+    }
+
+    .favourite {
+      font-size: 1.25rem;
     }
   }
 
